--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   },
   "dependencies": {
     "expo": "~48.0.5",
+    "expo-image": "~1.0.0",
+    "expo-linear-gradient": "~12.1.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.3"
+    "react-native": "0.71.7",
+    "react-native-elements": "^3.4.3",
+    "react-native-heroicons": "^3.2.0",
+    "react-native-linear-gradient": "^2.6.2",
+    "react-native-svg": "^13.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
